# totoro

./: .gitignore  .gitmodules  .pylintrc  embedding.json  embedding_zh.json  main.py  pyproject.toml  settings.dev.yaml  settings.prod.yaml  settings.test.yaml  settings.yaml
models/: doc_model.py
res/: mapping.json
tests/: test_embedding.py
tests/data/: test_zh.docx
totoro/: __init__.py  config.py
totoro/api/: http.py  rpc.py
totoro/biz/: __init__.py  core.py  doc.py  nlp.py
totoro/chunker/: __init__.py  chunker.py  naive.py
totoro/infra/: __init__.py  rdb.py
totoro/llm/: __init__.py
totoro/llm/embbeding/: __init__.py  embedding.py
totoro/llm/rerank/: rerank.py
totoro/models/: annotations_model.py  constant_model.py  doc_model.py  http_model.py  options_model.py  services_model.py
totoro/nlp/: __init__.py  query.py  search.py  surname.py  synonym.py  term_weight.py  tokenizer.py
totoro/parser/: __init__.py  docx.py  excel.py  html.py  media.py  pdf.py
totoro/parser/resume/: step_two.py
totoro/parser/resume/entities/: corporations.py  schools.py
totoro/pb/: constant_pb2.py  constant_pb2.pyi  doc_pb2.py  doc_pb2.pyi  pydantic_pb2.py  pydantic_pb2.pyi  services_pb2.py  services_pb2.pyi  services_pb2_grpc.py
totoro/services/: __init__.py  service.py
totoro/utils/: __init__.py  encoder.py  image.py  logger.py  utils.py
totoro/vision/: layout_recognizer.py  ocr.py  operators.py  recognizer.py  t_recognizer.py  table_structure_recognizer.py
