[tool.poetry]
name = "totoro"
version = "0.1.0"
description = ""
authors = ["vforfreedom96 <vforfreedom96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic-protobuf = {git = "https://github.com/begonia-org/pydantic-protobuf.git"}
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-docx = "^1.1.2"
python-magic = "^0.4.27"
html-text = "^0.6.2"
nltk = "^3.9.1"
hanziconv = "^0.3.2"
loguru = "^0.7.2"
datrie = "^0.8.2"
pydantic = "^2.9.2"
protobuf = "^4.21.12"
grpcio-tools = "^1.50.0"
mypy = "^1.13.0"
huggingface-hub = "^0.26.2"
zhipuai = "^2.1.5.20230904"
ollama = "^0.3.3"
openai = "^1.53.0"
bcembedding = "^0.1.5"
flagembedding = "^1.2.10"
tiktoken = "^0.8.0"
fastembed = "^0.3.0"
dashscope = "^1.20.12"
tika = "^2.6.0"
snowflake-id = "^1.0.2"
pytest = "^8.3.3"
isort = "^5.13.2"
chardet = "^5.2.0"
xgboost = "^2.1.2"
pdfplumber = "^0.11.4"
pypdf = "^5.1.0"
dynaconf = "^3.2.6"
opencv-python = "^4.10.0.84"
shapely = "^2.0.6"
pyclipper = "^1.3.0.post6"
python-pptx = "^1.0.2"
readability-lxml = "^0.8.1"
peft = "^0.13.2"
faiss-cpu = "^1.9.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
